--- a/src/main/webapp/style/css/base.css
+++ b/src/main/webapp/style/css/base.css
@@ -362,7 +362,7 @@ html{font-size:10px}
 
 .alert {z-index: 9997;position: fixed;top: 35%;left: 2.4rem;width: 6rem;height: 4rem;padding: 0 0 0 0;background-color: #FFFFFF;padding: 0px;margin: 0px;border-radius: 0.3rem;}
 .alert p{text-align: center;top: 1rem;position: relative;font-size: 0.4rem;color: #333333;}
-.alert .alert-button{width: 100%;height: 0.9rem;background-color: #FF1224;color:#fff;margin-left: -1px;position: relative;top: 2.6rem;font-size: 0.4rem;border-radius: 0 0 0.3rem 0.3rem;}
+.alert .alert-button{text-align: center;width: 100%;height: 0.9rem;background-color: #FF1224;color:#fff;margin-left: -1px;position: relative;top: 2.6rem;font-size: 0.4rem;border-radius: 0 0 0.3rem 0.3rem;}
 .alert .bottom{width:100%;height: 1.7rem;float: left;margin-top: 2.54rem;}
 .alert .bottom button {width: 49%;float: left;height: 0.9rem;background-color: #FF1224;color: #fff;font-size: 0.4rem;}
 .alert .bottom .cancel {background-color: #ffab12;}
