--- a/src/main/webapp/style/css/page.css
+++ b/src/main/webapp/style/css/page.css
@@ -74,14 +74,16 @@
 
 .recomtwo{margin-top: 1.5rem;}
 .menu-list{width: 100%; position: absolute; z-index: 9999;}
-.menu-list ul li{background-color:#fff; text-align: center; width: 33.333%; float: left;}
+.menu-list ul li{background-color:#fff; text-align: center; width: 25%; float: left;}
 .menu-list ul li a{color: #888888; border-bottom:solid 1px #dfdfdf; font-size:.36rem; display: block; position: relative; padding: .3rem 0;}
 .menu-list ul li .inactive i{ background:url(../../images/xia.png) no-repeat center; background-size: 50%; width: 29px; height: 8px; display: inline-block;}
 .menu-list ul li .inactives i{background:url(../../images/shang.png) no-repeat center; background-size: 50%; width: 29px; height: 8px; display: inline-block;} 
 .menu-list ul li .inactives{color: #0089e1;}
-.menu-list ul li ul{display: none;}
+/*.menu-list ul li ul{display: none;}*/
 .menu-list ul li ul li { border-left:0; text-align: left; width: 100%; border-right:0; background-color:#fff; border-color:#dfdfdf;}
-.menu-list ul li ul li a{display: block; width: 100%; padding-left: 1rem; color:#333333; font-size: .36rem;}
+.menu-list ul li ul .second-ul {top:1.1rem; left: 50%; width: 25%; border-left:0; position: absolute; text-align: center; border-right:0; background-color:#fff; border-color:#dfdfdf;}
+.menu-list ul li ul .third-ul {top:0rem; left:100%; width:100%; border-left:0; position: absolute; text-align: center; border-right:0; background-color:#fff; border-color:#dfdfdf;}
+.menu-list ul li ul li a{display: block; width: 100%; text-align: center; color:#333333; font-size: .36rem;}
 .menu-last{ background-color:#d6e6f1; border-color:#6196bb;}
 .menu-list ul li ul li:nth-child(2n){background-color: #fafafa;}
 
